--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,13 @@
         <version>2.5</version>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
+         <systemProperties>
+         	<property>
+         		<!-- transfer datasource.default parameter -->
+         		<name>datasource.default</name>
+         		<value>${datasource.default}</value>
+         	</property>
+         </systemProperties>
           <failIfNoTests>false</failIfNoTests>
           <includes>
             <include>**/Test*.java</include>
