--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,13 @@
       <version>5.1.27</version>
       <scope>test</scope>
     </dependency>
+    
+	<dependency>
+		<groupId>com.microsoft.sqlserver</groupId>
+		<artifactId>sqljdbc</artifactId>
+		<version>4.1</version>
+      <scope>test</scope>
+	</dependency>
 
     <dependency>
       <groupId>junit</groupId>
