--- a/src/test/resources/ebean.properties
+++ b/src/test/resources/ebean.properties
@@ -100,6 +100,39 @@ datasource.pg.password=test
 datasource.pg.databaseUrl=jdbc:postgresql://127.0.0.1:5433/test
 datasource.pg.databaseDriver=org.postgresql.Driver
 
+# Hudson tests
+
+# VirtualBox Debian with Mysql
+datasource.DebianMySQL.username=documaster
+datasource.DebianMySQL.password=documaster
+datasource.DebianMySQL.databaseUrl=jdbc:mysql://192.168.1.11:3306/documaster
+datasource.DebianMySQL.databaseDriver=com.mysql.jdbc.Driver
+
+# VirtualBox Debian with PostgreSQL
+datasource.DebianPostgreSQL.username=documaster
+datasource.DebianPostgreSQL.password=documaster
+datasource.DebianPostgreSQL.databaseUrl=jdbc:postgresql://192.168.1.11:5433/documaster
+datasource.DebianPostgreSQL.databaseDriver=org.postgresql.Driver
+
+# VirtualBox Debian with PostgreSQL 9.3
+datasource.DebianPostgreSQL93.username=documaster
+datasource.DebianPostgreSQL93.password=documaster
+datasource.DebianPostgreSQL93.databaseUrl=jdbc:postgresql://192.168.1.11:5433/documaster
+datasource.DebianPostgreSQL93.databaseDriver=org.postgresql.Driver
+
+# VirtualBox Microsoft Windows 2012 with SQL Server 2008
+datasource.win2012sql2008.username=documaster
+datasource.win2012sql2008.password=documaster
+datasource.win2012sql2008.databaseUrl=jdbc:sqlserver://192.168.1.11:5433/documaster
+datasource.win2012sql2008.databaseDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# VirtualBox Microsoft Windows 2012 with SQL Server 2012
+datasource.win2012sql2012.username=documaster
+datasource.win2012sql2012.password=documaster
+datasource.win2012sql2012.databaseUrl=jdbc:sqlserver://192.168.1.11:5433/documaster
+datasource.win2012sql2012.databaseDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+
 #datasource.ms.username=sa
 #datasource.ms.password=changeme
 #datasource.ms.databaseUrl=jdbc:sqlserver://localhost:65188
