Added exception rethrow in EBean ServerManager. Updated PostgreSQL connector because of error: "org.postgresql.util.PSQLException: Metoda org.postgresql.jdbc4.Jdbc4Connection.isValid(int)nie jest jeszcze obsługiwana."

--- a/pom.xml
+++ b/pom.xml
@@ -127,9 +127,11 @@
     <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>8.4-701.jdbc4</version>
+      <!-- <version>8.4-701.jdbc4</version> -->
+      <version>9.1-901-1.jdbc4</version>
       <scope>test</scope>
     </dependency>
+    
 
     <dependency>
       <groupId>org.hsqldb</groupId>
