Updated heartbeatsql in datasource configuration for postgresql.

--- a/src/test/resources/ebean.properties
+++ b/src/test/resources/ebean.properties
@@ -111,12 +111,14 @@ datasource.DebianMySQL.databaseDriver=com.mysql.jdbc.Driver
 # VirtualBox Debian with PostgreSQL
 datasource.DebianPostgreSQL.username=documaster
 datasource.DebianPostgreSQL.password=documaster
+datasource.DebianPostgreSQL.heartbeatSql=SELECT NOW()
 datasource.DebianPostgreSQL.databaseUrl=jdbc:postgresql://192.168.1.11:5432/documaster
 datasource.DebianPostgreSQL.databaseDriver=org.postgresql.Driver
 
 # VirtualBox Debian with PostgreSQL 9.3
 datasource.DebianPostgreSQL93.username=documaster
 datasource.DebianPostgreSQL93.password=documaster
+datasource.DebianPostgreSQL93.heartbeatSql=SELECT NOW()
 datasource.DebianPostgreSQL93.databaseUrl=jdbc:postgresql://192.168.1.11:5432/documaster
 datasource.DebianPostgreSQL93.databaseDriver=org.postgresql.Driver
 
