--- a/pom.xml
+++ b/pom.xml
@@ -127,8 +127,8 @@
     <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <!-- <version>8.4-701.jdbc4</version> -->
-      <version>9.1-901-1.jdbc4</version>
+      <version>8.4-701.jdbc4</version>
+      <!-- <version>9.1-901-1.jdbc4</version>  -->
       <scope>test</scope>
     </dependency>
     
