--- a/src/test/resources/ebean.properties
+++ b/src/test/resources/ebean.properties
@@ -125,13 +125,13 @@ datasource.DebianPostgreSQL93.databaseDriver=org.postgresql.Driver
 # VirtualBox Microsoft Windows 2012 with SQL Server 2008
 datasource.win2012sql2008.username=documaster
 datasource.win2012sql2008.password=documaster
-datasource.win2012sql2008.databaseUrl=jdbc:sqlserver://192.168.1.11:1433/documaster
+datasource.win2012sql2008.databaseUrl=jdbc:sqlserver://192.168.1.11;databaseName=documaster
 datasource.win2012sql2008.databaseDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # VirtualBox Microsoft Windows 2012 with SQL Server 2012
 datasource.win2012sql2012.username=documaster
 datasource.win2012sql2012.password=documaster
-datasource.win2012sql2012.databaseUrl=jdbc:sqlserver://192.168.1.11:1433/documaster
+datasource.win2012sql2012.databaseUrl=jdbc:sqlserver://192.168.1.11;databaseName=documaster
 datasource.win2012sql2012.databaseDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
