Fixed postgresql heartbeatTimeoutSeconds parameter. Disabled setAddOneToOneUniqueContraint for MS SQL.

--- a/src/test/resources/ebean.properties
+++ b/src/test/resources/ebean.properties
@@ -112,6 +112,7 @@ datasource.DebianMySQL.databaseDriver=com.mysql.jdbc.Driver
 datasource.DebianPostgreSQL.username=documaster
 datasource.DebianPostgreSQL.password=documaster
 datasource.DebianPostgreSQL.heartbeatSql=SELECT NOW()
+datasource.DebianPostgreSQL.heartbeatTimeoutSeconds=0
 datasource.DebianPostgreSQL.databaseUrl=jdbc:postgresql://192.168.1.11:5432/documaster
 datasource.DebianPostgreSQL.databaseDriver=org.postgresql.Driver
 
@@ -119,6 +120,7 @@ datasource.DebianPostgreSQL.databaseDriver=org.postgresql.Driver
 datasource.DebianPostgreSQL93.username=documaster
 datasource.DebianPostgreSQL93.password=documaster
 datasource.DebianPostgreSQL93.heartbeatSql=SELECT NOW()
+datasource.DebianPostgreSQL93.heartbeatTimeoutSeconds=0
 datasource.DebianPostgreSQL93.databaseUrl=jdbc:postgresql://192.168.1.11:5432/documaster
 datasource.DebianPostgreSQL93.databaseDriver=org.postgresql.Driver
 
